// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createPageEmbedment rejects if the server returns an error 2`] = `
{
  "delete": [],
  "get": [],
  "head": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [
    {
      "baseURL": "http://acme.gorgias.docker:4001",
      "data": "{"page_external_id":"123456789","position":"TOP"}",
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json;charset=utf-8",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "post",
      "params": {},
      "paramsSerializer": [Function],
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "url": "/api/help-center/help-centers/1/shopify-page-embedments",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "put": [],
}
`;

exports[`createPageEmbedment resolves with a created page embedment on success 1`] = `
{
  "delete": [],
  "get": [],
  "head": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [
    {
      "baseURL": "http://acme.gorgias.docker:4001",
      "data": "{"page_external_id":"123456789","position":"TOP"}",
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json;charset=utf-8",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "post",
      "params": {},
      "paramsSerializer": [Function],
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "url": "/api/help-center/help-centers/1/shopify-page-embedments",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "put": [],
}
`;

exports[`getPageEmbedments rejects if the server returns an error 2`] = `
{
  "delete": [],
  "get": [
    {
      "baseURL": "http://acme.gorgias.docker:4001",
      "data": undefined,
      "headers": {
        "Accept": "application/json, text/plain, */*",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "params": {},
      "paramsSerializer": [Function],
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "url": "/api/help-center/help-centers/1/shopify-page-embedments",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [],
}
`;

exports[`getPageEmbedments resolves with a list of page embedments on success 1`] = `
{
  "delete": [],
  "get": [
    {
      "baseURL": "http://acme.gorgias.docker:4001",
      "data": undefined,
      "headers": {
        "Accept": "application/json, text/plain, */*",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "params": {},
      "paramsSerializer": [Function],
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "url": "/api/help-center/help-centers/1/shopify-page-embedments",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [],
}
`;

exports[`getShopifyPages rejects if the server returns an error 2`] = `
{
  "delete": [],
  "get": [
    {
      "baseURL": "http://acme.gorgias.docker:4001",
      "data": undefined,
      "headers": {
        "Accept": "application/json, text/plain, */*",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "params": {},
      "paramsSerializer": [Function],
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "url": "/api/help-center/help-centers/1/shopify-pages",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [],
}
`;

exports[`getShopifyPages resolves with a list of shopify pages on success 1`] = `
{
  "delete": [],
  "get": [
    {
      "baseURL": "http://acme.gorgias.docker:4001",
      "data": undefined,
      "headers": {
        "Accept": "application/json, text/plain, */*",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "params": {},
      "paramsSerializer": [Function],
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "url": "/api/help-center/help-centers/1/shopify-pages",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [],
}
`;
